<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_margin_long"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_screen_hide_height"/>

                <EditText
                    android:id="@+id/screen_hide_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_tertiary">
            </View>

            <TextView
                style="@style/FieldTypo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin_middle"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:textSize="@dimen/common_text_size_large"
                android:text="@string/test_type_before"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_before_test_count"/>

                <EditText
                    android:id="@+id/before_test_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_tertiary">
            </View>

            <TextView
                style="@style/FieldTypo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin_middle"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:textSize="@dimen/common_text_size_large"
                android:text="@string/test_type_a"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_a_base_x"/>

                <EditText
                    android:id="@+id/a_base_x"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_a_base_y"/>

                <EditText
                    android:id="@+id/a_base_y"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_a_button_size"/>

                <EditText
                    android:id="@+id/a_button_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_a_button_radius"/>

                <EditText
                    android:id="@+id/a_button_radius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_a_button_degree"/>

                <EditText
                    android:id="@+id/a_button_degree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_a_test_count"/>

                <EditText
                    android:id="@+id/a_test_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_tertiary">
            </View>

            <TextView
                style="@style/FieldTypo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin_middle"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:textSize="@dimen/common_text_size_large"
                android:text="@string/test_type_b"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_b_button_size"/>

                <EditText
                    android:id="@+id/b_button_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/FieldTypo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_margin_middle"
                    android:text="@string/setting_b_button_interval"/>

                <EditText
                    android:id="@+id/b_button_interval"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="@dimen/common_button_width"
                    android:layout_height="@dimen/common_button_height"
                    android:background="@color/accent">

                    <Button
                        android:id="@+id/save_button"
                        style="@style/ButtonTypo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?selectableItemBackground"
                        android:text="@string/save_button"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>